# trading-bot

./: .gitignore  README.md  pyproject.toml
main/dca/: run_dca.py
main/load_data/: download.py
main/ml/: load_data.py
main/strategy/: compare.py  run_buynhold.py  run_dca.py  run_rsi.py  run_smacrossover.py
src/backtesting/: core.py  metrics.py
src/data_loader/: dataloader.py  utils.py
src/strategy/: base.py  buy_n_hold.py  dca.py  rsi.py  sma.py
src/strategy/dca/: run_strategy.py
